cluster-talos/kubernetes/apps/autobrr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autobrr
  labels:
    k10.kasten.io/backup: "true"
